--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
 		"dev": "vite",
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"test": "vitest"
 	},
 	"dependencies": {
 		"@apollo/client": "^3.9.11",
 		"@apollo/server": "^4.10.2",
+		"@testing-library/react": "^15.0.1",
 		"apollo-link": "^1.2.14",
 		"graphql": "^16.8.1",
 		"graphql-tag": "^2.12.6",
@@ -29,9 +31,11 @@
 		"eslint": "^8.57.0",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.6",
+		"happy-dom": "^14.7.1",
 		"postcss": "^8.4.38",
 		"tailwindcss": "^3.4.3",
 		"typescript": "^5.2.2",
-		"vite": "^5.2.0"
+		"vite": "^5.2.0",
+		"vitest": "^1.5.0"
 	}
 }
